--- a/template.html
+++ b/template.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Games Link</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <style type="text/css">
-      .container {
-        max-width: 500px;
-        padding-top: 100px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <p>My string: {{my_string}}</p>
-      <!-- <p>Loop through the list:</p> -->
-      <ul>
-        {% for name,link in zip(names,my_list) %}
-        <li >
-          <a  href="{{link}}">{{name}} </a>
-        </li>
-        {% endfor %}
-      </ul>
+
+<head>
+  <title>Games Link</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <style type="text/css">
+    .container {
+      max-width: 500px;
+      padding-top: 100px;
+      font-size: larger;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-dark bg-dark">
+    <span class="navbar-brand mb-0 h1">Navbar</span>
+  </nav>
+  <div class="container">
+    
+    <!-- <p>Loop through the list:</p> -->
+    <div class="list-group">
+
     </div>
-  </body>
+    <ul>
+      {% for name,link in zip(names,my_list) %}
+
+      <a href="{{link}}" class="list-group-item list-group-item-action">{{name}}</a>
+      {% endfor %}
+    </ul>
+  </div>
+  <p>All links are pulled from http://www.redditsoccerstreams.tv. This site  not host or upload any video & media files, we are not responsible for the legality of the content of other linked or embedded sites. If you have any legal issues please contact appropriate media owners or hosters </p>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
