--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
+    <span class="navbar-brand mb-0 h1">Soccer Links</span>
   </nav>
   <div class="container">
     
