Minor Changes -  renamed main file as index.htm

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <ul>
       
 
-      <a href="https://v3.sportsonline.to/channels/pt/sporttv1.php" class="list-group-item list-group-item-action">Leixões vs Nacional</a>
+      <a href="https://v3.sportsonline.to/channels/pt/sporttv1.php" class="list-group-item list-group-item-action">Leasdasdasdasdixões vs Nacional</a>
       
 
       <a href="https://v3.sportsonline.to/channels/hd/hd8.php" class="list-group-item list-group-item-action">Utrecht vs Ajax</a>
